--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "ajv": "^6.5.0",
+        "gulp": "^3.9.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-jshint": "^2.1.0",
+        "gulp-sass": "^4.0.1",
+        "gulp-uglify": "^3.0.0",
+        "jshint": "^2.9.5"
     }
 }
