--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "mews/captcha": "~2.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
